# battleship

./: .hgignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  TODO.md  deploy.sh.in  mxeapt.gpg  rename_exe.sh.in
linux/: build.sh  package.sh  requirements.sh
src/: Exception.cpp  Game.hpp  Point.cpp  Point.hpp  Points.hpp  constants.hpp  main.cpp
src/bot/: Bot.cpp  Bot.hpp
src/controller/: GameController.cpp  GameController.hpp
src/desk_functions/: placeShips.cpp  placeShips.hpp  startGame.cpp  startGame.hpp
src/model/: Cell.hpp  GameDesk.cpp  GameDesk.hpp  GameDeskProxy.cpp  GameDeskProxy.hpp  checkWin.hpp  getShipCoordinates.hpp  spaceForShip.hpp
src/util/: Exception.cpp  Exception.hpp  rand.cpp  rand.hpp  random.cpp  random.hpp
src/view/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  TableModel.cpp  TableModel.h  TableModel.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qbattleship.qrc  tb.cpp
src/view/battleship/: battleship.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  tb.cpp  tb.h
windows/: EnvVarUpdate.nsh  build.sh  cp_files_to_build-dir.sh.in  nsis_wizard.sh.in  package.sh  wizard.nsi.in
